# Ipp

./: .gitignore  AUDIT.md  BUGFIX_INSTRUCTIONS.md  CONTRIBUTING.md  ERRORS.md  IPP_FULL_AUDIT.md  README.md  REPL_TUTORIAL.md  ROADMAP_V2 (1).md  ROADMAP_V2.md  main.py  pyproject.toml  test_comprehension.ipp  test_input.txt  test_match.ipp  test_str.ipp  test_vec2.ipp  test_vm_cmd.ipp  test_vm_for.ipp
examples/: game_helpers.ipp  simple_test.ipp  test_all.ipp  test_v02.ipp
ipp/: cli.py  main.py
ipp/interpreter/: interpreter.py
ipp/lexer/: lexer.py  token.py
ipp/lsp/: server.py
ipp/network/: __init__.py  ftp.py  http.py  smtp.py  websocket.py
ipp/parser/: ast.py  parser.py
ipp/runtime/: builtins.py  canvas.py
ipp/vm/: __init__.py  bytecode.py  compiler.py  vm.py
ipp/wasm/: compiler.py  runtime.py
temp_check/: ipp_lang-1.5.4.5-py3-none-any.whl
tests/: regression.py
tests/misc/: test_collections.ipp  test_debug_and.ipp  test_debug_and2.ipp  test_debug_and3.ipp  test_debug_and4.ipp  test_debug_and5.ipp  test_debug_and6.ipp  test_debug_bool.ipp  test_debug_eq.ipp  test_debug_eq10.ipp  test_debug_eq11.ipp  test_debug_eq12.ipp  test_debug_eq2.ipp  test_debug_eq3.ipp  test_debug_eq4.ipp  test_debug_eq5.ipp  test_debug_eq6.ipp  test_debug_eq7.ipp  test_debug_eq8.ipp  test_debug_eq9.ipp  test_debug_items.ipp  test_debug_items2.ipp  test_debug_test.ipp  test_debug_true.ipp  test_debug_true2.ipp  test_easing_random.ipp  test_math.ipp  test_named_args.ipp  test_output.txt  (+3 more)
vscode-extension/: README.md  package.json
web-playground/: README.md  index.html
(+42 files in other folders)
