[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ipp-lang"
version = "1.5.8"
description = "A beginner-friendly scripting language for game development"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "authorss81"}
]
keywords = ["language", "interpreter", "game", "scripting", "vm", "bytecode"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Interpreters",
    "Topic :: Games/Entertainment",
]
requires-python = ">=3.8"

[project.scripts]
ipp = "ipp.cli:main"

[project.urls]
Homepage = "https://github.com/authorss81/Ipp"
Documentation = "https://github.com/authorss81/Ipp/blob/main/TUTORIAL.md"
Repository = "https://github.com/authorss81/Ipp"
"Bug Tracker" = "https://github.com/authorss81/Ipp/issues"

[tool.setuptools.packages.find]
include = ["ipp*"]

[tool.setuptools.package-data]
ipp = ["*.ipp", "main.py"]
